# apple_picking_robot

./: .gitignore  ArchitectureProposal.md  README.md  ROS.md  dbaby.py  some_commands.txt
data/: .gitattributes  .gitignore  apple_picking_robot.xml
docker/nvidia-virtualgl/: Dockerfile  README.md  entrypoint.sh
docs/: ArchitectureProposal.md  Docker.md  Gazebo.md  HowToPlayAppleAame.md  How_to_play_Apple_game.md  Irobot.md  ROS.md  UnrealEngine4.md
experiments/data_augmentation/: augment_data.py  conf.txt  examples.ipynb  resize_and_strech.py
experiments/object_localization/ENet/: README.md
experiments/object_localization/datasets/: .gitignore  README.md
experiments/object_localization/tf_api/: .gitignore  detect_objects.ipynb  prep_dataset.py
papers/: PaperReview.md
presentations/: guntis_slides_20171102.pptx
ros/: nvrun.sh  run_apple_picker.sh
ros/launch/: _project.launch  project.launch
ros/src/hello_world/: .hello_world.py.swp  CMakeLists.txt  hello_world.py  package.xml
ros/src/nn_agent/: CMakeLists.txt  apple_checkpoint  guntis3.py_org  guntis4.py  nn_agent.py  package.xml
ros/src/nn_agent/backup.models/: apple_checkpoint.2018065
ros/src/nn_agent/bakup.dbaby/: guntis3.py  nn_agent.py  why.txt
ros/src/nn_agent/launch/: package.launch
ros/src/robot_control/: CMakeLists.txt  package.xml  robot_control.py
ros/src/robot_control/launch/: package.launch
sprint_retrospects/: 2017-09-05-15-20.md  2017-12-05-15-10.md  2017-19-05-15-10.md
weekly_retrospects/: 2017-10-12-15-10.md  2017-11-02-15-10.md  2017-12-14-15-10.md
(+77 files in other folders)
